--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Page#index</h1>
 <p>Find me in app/views/page/index.html.erb</p>
+
+<p>Visit a <%= link_to "protected page", :action => :protected %>.
