Add color to Rails flash messages

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,11 @@
  *= require_self
  *= require_tree .
 */
+
+/* Rails flash */
+p.flash {
+	background: #ff8;
+}
+p.flash.error {
+	background: #f88;
+}
