--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
 <body>
 
 <%# Add flag messages as is typical in Rails and required by Devise %>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<p class="flash notice"><%= notice %></p>
+<p class="flash alert"><%= alert %></p>
 
 <%= yield %>
 
